# fast_density_clustering

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE.rst  README.md  READMEpypi.md  density_cluster.py  plotting.py  pyproject.toml  robustness.py  setup.py  special_datasets.py
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  benchmark_quality.py  benchmark_rust_vs_python.py  benchmark_scaling.py  benchmark_sota.py  benchmark_sota_scaling.py  sota_ari.csv  sota_runtime.csv  sota_scaling_memory.csv  sota_scaling_runtime.csv  sweep_eta.py
cluster/: density_cluster.py  plotting.py  setup.py
clustering/: fdc.py  plotting.py  robustness.py  setup.py
dev/: fdc_algorithm.ipynb  fdc_explore.py
example/: benchmark_sklearn.py  example.py  example.py.lprof  example2.py  example2.py.lprof  example3.py  example4.py  example5.py  example_test.py
fdc/: __init__.py  classify.py  density_estimation.py  fdc.py  graph.py  mycolors.py  plotting.py  special_datasets.py  tree.py  tree_old.py  utils.py  widget.py
fdc.egg-info/: PKG-INFO  SOURCES.txt
fdc/cython/: fdc_cython.pyx
fdc/testing/: hier.pkl  test_main.py
src/: cluster.rs  kde.rs  knn.rs  lib.rs
tests/: test_examples.py  test_fdc.py  test_graph.py  test_hierarchy.py  test_kde.py  test_rust_backend.py  test_special_datasets.py  test_utils.py
