[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fdc"
version = "1.16"
description = "Fast Density Clustering in low-dimension"
readme = "READMEpypi.md"
license = { text = "MIT" }
authors = [
    { name = "Alexandre Day", email = "alexandre.day1@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21",
    "scikit-learn>=1.0",
    "scipy>=1.7",
]

[project.optional-dependencies]
plotting = ["matplotlib>=3.4"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://alexandreday.github.io/"
Repository = "https://github.com/alexandreday/fast_density_clustering"

[tool.setuptools.packages.find]
where = ["."]
include = ["fdc*"]

[tool.mypy]
python_version = "3.9"
files = ["fdc/fdc.py", "fdc/density_estimation.py"]
disallow_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["sklearn.*", "scipy.*"]
ignore_missing_imports = true
