[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "fdc"
version = "1.17"
description = "Fast Density Clustering in low-dimension"
readme = "READMEpypi.md"
license = { text = "MIT" }
authors = [
    { name = "Alexandre Day", email = "alexandre.day1@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21",
    "scikit-learn>=1.0",
    "scipy>=1.7",
]

[project.optional-dependencies]
plotting = ["matplotlib>=3.4"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.8",
]
benchmark = [
    "clustering-benchmarks>=1.1",
    "tabulate>=0.9",
    "matplotlib>=3.4",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "fdc_rs"
python-packages = ["fdc"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://alexandreday.github.io/"
Repository = "https://github.com/alexandreday/fast_density_clustering"

[tool.mypy]
python_version = "3.10"
files = ["fdc/fdc.py", "fdc/density_estimation.py", "fdc/graph.py"]
disallow_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["sklearn.*", "scipy.*", "lattice.*", "fdc_rs"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fdc.classify"
disallow_untyped_defs = false
